# gnuradio-android

./: .gitignore  .gitmodules  android_cmake.sh  android_toolchain.sh  android_toolchain_deinit.sh  build.sh  build_dependencies.sh  build_gnuradio.sh  build_python_modules.sh  build_system_setup.sh  download_deps_src.sh  include_dependencies.sh  toolchain_patches.sh
GRCTestFlow/: FMRadioRecv.grc  FMRadioRecv.py  FMRecv.grc  FMRecv.py  FMRecvTransmit.grc  FMRecvTransmit.py  LightAndAccel.grc  LightAndAccel.py  Microphone.py  MicrophoneTest.grc  MicrophoneTest.py  PlutoHello.grc  PlutoHello.py  RangeNumber.grc  RangeNumber.py  SignalLoopback.grc  SignalLoopback.py  SoundLoopback.grc  SoundLoopback.py  SoundSine.grc  SoundSine.py  wavfile.grc  wavfile.py
GRCTestFlow/SignalLoopback/: CMakeLists.txt  SignalLoopback.cpp  SignalLoopback.hpp
android-app-helper/: CMakeLists.txt  README.md  android_clean_libs.sh  android_deploy_libs.sh  android_deploy_qt.sh
android-app-helper/android/: AndroidManifest.xml  build.gradle  gradle.properties
android-app-helper/android/src/org/adi/GrDemo/: GrActivity.java  GrApplication.java
docker/: Dockerfile  build.sh
